--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -161,6 +161,8 @@ seasons.jpg: seasons-91708b3dbe0c2d8bb710a5aecac5aad0.jpg
 seasons/index.jpg: seasons-91708b3dbe0c2d8bb710a5aecac5aad0.jpg
 sedation.jpg: sedation-b3e7e359b33a77349bdf2ea70030a819.jpg
 sedation/index.jpg: sedation-b3e7e359b33a77349bdf2ea70030a819.jpg
+sharkballandchain.png: sharkballandchain-28a1597e0fc9693fc62fa1a3883cbd31.png
+sharkballandchain/index.png: sharkballandchain-28a1597e0fc9693fc62fa1a3883cbd31.png
 sleepapnea.jpg: sleepapnea-035b57cafbdc49a806073557fe09d149.jpg
 sleepapnea/index.jpg: sleepapnea-035b57cafbdc49a806073557fe09d149.jpg
 small_6R_logo.jpg: small_6R_logo-b6f31136587e41865d3a596e353c8546.jpg
@@ -215,18 +217,18 @@ wisdomtooth_staff.jpg: wisdomtooth_staff-2d2b6b250f22a28917156268f545adf7.jpg
 wisdomtooth_staff/index.jpg: wisdomtooth_staff-2d2b6b250f22a28917156268f545adf7.jpg
 xray.jpg: xray-99fcee9bd12227b1d1b67269f9fdad41.jpg
 xray/index.jpg: xray-99fcee9bd12227b1d1b67269f9fdad41.jpg
-application.js: application-454f2de5a2fda2ad5164f73a226fd232.js
-application/index.js: application-454f2de5a2fda2ad5164f73a226fd232.js
-application.css: application-c023261ccd2b809a8831ef4952b00598.css
-application/index.css: application-c023261ccd2b809a8831ef4952b00598.css
-fontawesome-webfont.eot: fontawesome-webfont-b49e662c23140944a17d6301d2259446.eot
-fontawesome-webfont/index.eot: fontawesome-webfont-b49e662c23140944a17d6301d2259446.eot
-fontawesome-webfont.svg: fontawesome-webfont-863eb1732db4aa1a1b4ee4db0ec0dfe4.svg
-fontawesome-webfont/index.svg: fontawesome-webfont-863eb1732db4aa1a1b4ee4db0ec0dfe4.svg
-fontawesome-webfont.ttf: fontawesome-webfont-355e4339bddddbaeb2f4a96538067745.ttf
-fontawesome-webfont/index.ttf: fontawesome-webfont-355e4339bddddbaeb2f4a96538067745.ttf
-fontawesome-webfont.woff: fontawesome-webfont-43001fa1001b4ca99399605a8fba6984.woff
-fontawesome-webfont/index.woff: fontawesome-webfont-43001fa1001b4ca99399605a8fba6984.woff
+application.js: application-ae2068903e5699dd3c631a812607ab93.js
+application/index.js: application-ae2068903e5699dd3c631a812607ab93.js
+application.css: application-419688e03df727476c74bb8b016d1bc5.css
+application/index.css: application-419688e03df727476c74bb8b016d1bc5.css
+fontawesome-webfont.eot: fontawesome-webfont-009f6d1f667cc42c25e712ab3429cbc7.eot
+fontawesome-webfont/index.eot: fontawesome-webfont-009f6d1f667cc42c25e712ab3429cbc7.eot
+fontawesome-webfont.svg: fontawesome-webfont-f1c2889911d212e1403b68eabc1a3a56.svg
+fontawesome-webfont/index.svg: fontawesome-webfont-f1c2889911d212e1403b68eabc1a3a56.svg
+fontawesome-webfont.ttf: fontawesome-webfont-fb7a72c810ec644f3c26dcca68638308.ttf
+fontawesome-webfont/index.ttf: fontawesome-webfont-fb7a72c810ec644f3c26dcca68638308.ttf
+fontawesome-webfont.woff: fontawesome-webfont-b4d67f1e5651506c3e80d842ee67d6ba.woff
+fontawesome-webfont/index.woff: fontawesome-webfont-b4d67f1e5651506c3e80d842ee67d6ba.woff
 twitter/bootstrap/glyphicons-halflings-white.png: twitter/bootstrap/glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
 twitter/bootstrap/glyphicons-halflings-white/index.png: twitter/bootstrap/glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
 twitter/bootstrap/glyphicons-halflings.png: twitter/bootstrap/glyphicons-halflings-2851b489e8c39f8fad44fc10efb99c3e.png
