added 2 more sharks

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -163,6 +163,12 @@ sedation.jpg: sedation-b3e7e359b33a77349bdf2ea70030a819.jpg
 sedation/index.jpg: sedation-b3e7e359b33a77349bdf2ea70030a819.jpg
 sharkballandchain.png: sharkballandchain-e1c0810c68dfbf0ae2c935777dab1718.png
 sharkballandchain/index.png: sharkballandchain-e1c0810c68dfbf0ae2c935777dab1718.png
+sharkballandchain2.png: sharkballandchain2-6418c051d8b971a59d42415e740c8ed5.png
+sharkballandchain2/index.png: sharkballandchain2-6418c051d8b971a59d42415e740c8ed5.png
+sharkballandchain2.psd: sharkballandchain2-f083afee1827e6a5256447025283bd3e.psd
+sharkballandchain2/index.psd: sharkballandchain2-f083afee1827e6a5256447025283bd3e.psd
+sharkballandchain3.png: sharkballandchain3-60a779556a4b751edbfb60ccd8067511.png
+sharkballandchain3/index.png: sharkballandchain3-60a779556a4b751edbfb60ccd8067511.png
 sleepapnea.jpg: sleepapnea-035b57cafbdc49a806073557fe09d149.jpg
 sleepapnea/index.jpg: sleepapnea-035b57cafbdc49a806073557fe09d149.jpg
 small_6R_logo.jpg: small_6R_logo-b6f31136587e41865d3a596e353c8546.jpg
