made changes as per williams email

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -101,10 +101,12 @@ healthyeating.jpg: healthyeating-495f0185e5facf191494a64d4de4c324.jpg
 healthyeating/index.jpg: healthyeating-495f0185e5facf191494a64d4de4c324.jpg
 home_banner.jpg: home_banner-60e6862652ee9d84e6b00a9db24b441d.jpg
 home_banner/index.jpg: home_banner-60e6862652ee9d84e6b00a9db24b441d.jpg
-homepage-lion.jpg: homepage-lion-aee916517b9a09c19e1e4961618cc325.jpg
-homepage-lion/index.jpg: homepage-lion-aee916517b9a09c19e1e4961618cc325.jpg
-homepage-signature.jpg: homepage-signature-43243725b6c81f0db262122cf3ec8b1e.jpg
-homepage-signature/index.jpg: homepage-signature-43243725b6c81f0db262122cf3ec8b1e.jpg
+homepage-award.jpg: homepage-award-085b122e2c30a35357a65b7e5b1336bf.jpg
+homepage-award/index.jpg: homepage-award-085b122e2c30a35357a65b7e5b1336bf.jpg
+homepage-lion.jpg: homepage-lion-d07ed61496c54c0f222479031ff3fbe0.jpg
+homepage-lion/index.jpg: homepage-lion-d07ed61496c54c0f222479031ff3fbe0.jpg
+homepage-signature.jpg: homepage-signature-60ae6add24b8c3c249abb074847d5ee9.jpg
+homepage-signature/index.jpg: homepage-signature-60ae6add24b8c3c249abb074847d5ee9.jpg
 implant.jpg: implant-f4ccaa066199262b371b5360d7e443e8.jpg
 implant/index.jpg: implant-f4ccaa066199262b371b5360d7e443e8.jpg
 implant_banner.jpg: implant_banner-28350a107003af3fd95ea1b4962295a0.jpg
@@ -147,6 +149,8 @@ paperandfeather.png: paperandfeather-53bae8e32f1bcf2a900d6243f759f1e6.png
 paperandfeather/index.png: paperandfeather-53bae8e32f1bcf2a900d6243f759f1e6.png
 paymentoptions.jpg: paymentoptions-ce615af6e65c9b9c4a802e82a62bc73d.jpg
 paymentoptions/index.jpg: paymentoptions-ce615af6e65c9b9c4a802e82a62bc73d.jpg
+piggybank.png: piggybank-17de7a428799e814634631a156a3fb5a.png
+piggybank/index.png: piggybank-17de7a428799e814634631a156a3fb5a.png
 pocketwatch.jpg: pocketwatch-8f32931f551e8865ecff0ddd91c2ae3c.jpg
 pocketwatch/index.jpg: pocketwatch-8f32931f551e8865ecff0ddd91c2ae3c.jpg
 poluswhitener.jpg: poluswhitener-1668167635cabccf5b64e6b85b392328.jpg
